--- a/public/index.html
+++ b/public/index.html
@@ -119,13 +119,15 @@
 
                 const imagesToDisplay = data.images.slice(0, 8); // 최대 8개 이미지만 사용
 
-                // ⭐️ 이미지를 한 번만 표시하고, 정렬 및 간격을 CSS에 맡깁니다.
-                imagesToDisplay.forEach(item => {
-                    const img = document.createElement('img');
-                    img.src = item.url;
-                    img.className = 'gallery-loading-item';
-                    galleryTrack.appendChild(img);
-                });
+                // ⭐️ [복구] 이미지를 3번 복제하여 무한 롤링 효과 준비
+                for (let i = 0; i < 3; i++) {
+                    imagesToDisplay.forEach(item => {
+                        const img = document.createElement('img');
+                        img.src = item.url;
+                        img.className = 'gallery-loading-item';
+                        galleryTrack.appendChild(img);
+                    });
+                }
             } else {
                 galleryTrack.innerHTML = '<p class="error-text">No images in gallery to display.</p>';
             }
@@ -136,6 +138,7 @@
 
     // 페이지 로드 시 갤러리 이미지 로드
     loadGalleryImages();
+
 
     // --- 모드 전환, 업로드, QR 로직 (유지) ---
 
@@ -222,11 +225,12 @@
 
     // --- AI 변환 버튼 클릭 시 (핵심 로직) ---
     document.getElementById('aiConvertButton').addEventListener('click', async () => {
-        // ... (안전 필터링 로직 유지) ...
-        const DANGER_KEYWORDS = ['sex', 'nude', 'violence', 'gun', 'weapon', 'gore', 'child abuse', 'explicit', 'hate speech', 'bloody'];
         let prompt = document.getElementById('textPromptInput').value;
         const style = document.getElementById('styleSelect').value;
         const stylePrompt = document.getElementById('stylePromptInput').value;
+
+        // 안전 필터링 로직 (유지)
+        const DANGER_KEYWORDS = ['sex', 'nude', 'violence', 'gun', 'weapon', 'gore', 'child abuse', 'explicit', 'hate speech', 'bloody'];
         const fullPrompt = prompt + (stylePrompt ? ', ' + stylePrompt : '');
         const lowerCasePrompt = fullPrompt.toLowerCase();
         let safetyViolation = false;
@@ -239,6 +243,7 @@
         if (safetyViolation) {
             return alert('⚠️ 콘텐츠 정책 위반 가능성이 있는 키워드가 감지되었습니다. 내용을 수정해주세요.');
         }
+        // 안전 필터링 로직 끝
 
         const formData = new FormData();
         formData.append('prompt', fullPrompt);
@@ -255,12 +260,12 @@
             return alert(`[${currentMode} Mode] Missing input.`);
         }
 
-        // ⭐️ [STAGE 1: 롤링 배너 로딩 시작]
+        // ⭐️ [STAGE 1: 롤링 배너 시작]
         galleryLoadingScreen.style.display = 'flex';
         galleryLoadingScreen.classList.add('start-rolling'); // CSS 애니메이션 시작
 
         try {
-            // AI 응답 대기
+            // AI 응답을 기다리는 Promise
             const response = await fetch('/api/ai-process', { method: 'POST', body: formData });
 
             if (!response.ok) {
@@ -273,10 +278,10 @@
 
             if (data.filename) {
 
-                // ⭐️ [STAGE 2: 롤링 중지 및 리디렉션]
+                // ⭐️ [STAGE 2: AI 완료 후 롤링 중지 및 리디렉션]
                 galleryLoadingScreen.classList.remove('start-rolling'); // 롤링 중지
 
-                // ⭐️ 다운로드 페이지로 즉시 이동 (버벅거림 제거)
+                // download.html로 이동 (버벅거림 방지를 위해 짧은 지연 없이 바로 리디렉션)
                 let redirectUrl = `download.html?file=${data.filename}&mode=${data.mode}`;
                 if (data.visionDescription) {
                     redirectUrl += `&desc=${encodeURIComponent(data.visionDescription)}`;
