--- a/public/index.html
+++ b/public/index.html
@@ -76,14 +76,9 @@
     </div>
 </div>
 
-<div id="galleryLoadingScreen" class="gallery-loading-screen" style="display: none;">
-    <div class="gallery-track-container">
-        <div id="galleryTrack" class="gallery-track">
-        </div>
-    </div>
-    <div class="loading-overlay-text">
-        <p>PROCESSING</p>
-    </div>
+<div id="fullScreenLoading" class="full-screen-loading" style="display: none;">
+    <img src="brush_loading_bw.gif" alt="Processing..." class="loading-gif-full">
+    <p class="loading-text-full">PROCESSING...</p>
 </div>
 
 <script>
@@ -105,21 +100,27 @@
     const qrOriginalImage = document.getElementById('qrOriginalImage');
     const qrFileStatus = document.getElementById('qrFileStatus');
 
-    const galleryLoadingScreen = document.getElementById('galleryLoadingScreen');
-    const galleryTrack = document.getElementById('galleryTrack');
+    const fullScreenLoading = document.getElementById('fullScreenLoading');
+    const loadingGif = document.querySelector('.loading-gif-full');
+    const loadingText = document.querySelector('.loading-text-full');
 
-    // --- 갤러리 이미지 로드 및 복제 함수 (유지) ---
+    // ⭐️ GIF 타이밍 상수 (정확히 측정하고 조정해야 합니다.)
+    const GIF_WHITE_FRAME_TIME_MS = 2500;
+    const FINAL_WAIT_MS = 200;
+    const FADE_IN_TIME_MS = 300; // CSS에서 opacity transition 시간과 일치해야 함
+
+    // --- 갤러리 이미지 로드 (유지) ---
     async function loadGalleryImages() {
         try {
             const response = await fetch('/api/gallery-list');
             const data = await response.json();
 
             if (data.images && data.images.length > 0) {
+                const galleryTrack = document.getElementById('galleryTrack');
                 galleryTrack.innerHTML = '';
 
                 const imagesToDisplay = data.images.slice(0, 8);
 
-                // ⭐️ 무한 롤링 효과를 위해 이미지를 3번 복제하여 로드
                 for (let i = 0; i < 3; i++) {
                     imagesToDisplay.forEach(item => {
                         const img = document.createElement('img');
@@ -129,7 +130,7 @@
                     });
                 }
             } else {
-                galleryTrack.innerHTML = '<p class="error-text">No images in gallery to display.</p>';
+                document.getElementById('galleryTrack').innerHTML = '<p class="error-text">No images in gallery to display.</p>';
             }
         } catch (e) {
             console.error("Failed to load gallery images for loading screen:", e);
@@ -138,8 +139,7 @@
 
     loadGalleryImages();
 
-
-    // --- 기타 로직 (유지) ---
+    // --- 모드 전환, 업로드, QR 로직 (유지) ---
 
     document.querySelectorAll('.mode-btn').forEach(button => {
         button.addEventListener('click', () => {
@@ -156,35 +156,80 @@
     });
 
     uploadButton.addEventListener('click', () => fileUploader.click());
-    fileUploader.addEventListener('change', (event) => { /* ... (로직 유지) ... */ });
+    fileUploader.addEventListener('change', (event) => { /* ... (로직 유지) ... */
+        pcUploadedFile = event.target.files[0];
+        qrUploadedFileName = null;
+
+        const reader = new FileReader();
+        reader.onload = (e) => {
+            originalImage.src = e.target.result;
+            originalImage.style.display = 'block';
+            fileStatus.textContent = `File: ${pcUploadedFile.name}`;
+            qrOriginalImage.style.display = 'none';
+        };
+        reader.readAsDataURL(pcUploadedFile);
+    });
+
     qrUploadStartButton.addEventListener('click', startQrUploadSession);
     cancelQrButton.addEventListener('click', cancelQrUploadSession);
-    async function startQrUploadSession() { /* ... (로직 유지) ... */
+
+    async function startQrUploadSession() {
         const response = await fetch('/api/start-upload-session');
         const data = await response.json();
         currentSessionId = data.sessionId;
         const baseUrl = data.origin;
-        // ... (로직 유지) ...
+
+        if (!currentSessionId) return alert('Session start failed.');
+
+        qrBridgeArea.style.display = 'block';
+        qrUploadStartButton.style.display = 'none';
+
+        const mobileUploadUrl = `${baseUrl}/upload.html?id=${currentSessionId}`;
+
+        qrcodeDiv.innerHTML = '';
+        new QRCode(qrcodeDiv, { text: mobileUploadUrl, width: 150, height: 150 });
+        qrBridgeStatus.textContent = "Scan the QR code to upload.";
+
+        pollingInterval = setInterval(checkUploadStatus, 1000);
     }
 
-    async function checkUploadStatus() { /* ... (로직 유지) ... */
-        // ... (로직 유지) ...
+    async function checkUploadStatus() {
+        if (!currentSessionId) return;
+        const response = await fetch(`/api/check-upload-status/${currentSessionId}`);
+        const data = await response.json();
+
+        if (data.status === 'uploaded') {
+            clearInterval(pollingInterval);
+            currentSessionId = null;
+
+            qrUploadedFileName = data.fileInfo.fileName;
+            pcUploadedFile = null;
+
+            qrOriginalImage.src = `/images/uploads/${qrUploadedFileName}`;
+            qrOriginalImage.style.display = 'block';
+            qrFileStatus.textContent = `Upload complete: ${data.fileInfo.originalName}`;
+
+            qrBridgeArea.style.display = 'none';
+            qrUploadStartButton.style.display = 'inline-block';
+            alert('Mobile upload complete. Start generation.');
+        }
     }
 
-    function cancelQrUploadSession() { /* ... (로직 유지) ... */
+    function cancelQrUploadSession() {
         if (pollingInterval) clearInterval(pollingInterval);
         currentSessionId = null;
         qrBridgeArea.style.display = 'none';
         qrUploadStartButton.style.display = 'inline-block';
     }
 
-    // --- AI 변환 버튼 클릭 시 (핵심 로직: 부드러운 진입 및 버벅거림 제거) ---
+    // --- AI 변환 버튼 클릭 시 (핵심 로직: 부드러운 전환) ---
     document.getElementById('aiConvertButton').addEventListener('click', async () => {
-        // ... (안전 필터링 로직 유지) ...
-        const DANGER_KEYWORDS = ['sex', 'nude', 'violence', 'gun', 'weapon', 'gore', 'child abuse', 'explicit', 'hate speech', 'bloody'];
         let prompt = document.getElementById('textPromptInput').value;
         const style = document.getElementById('styleSelect').value;
         const stylePrompt = document.getElementById('stylePromptInput').value;
+
+        // 안전 필터링 로직 (유지)
+        const DANGER_KEYWORDS = ['sex', 'nude', 'violence', 'gun', 'weapon', 'gore', 'child abuse', 'explicit', 'hate speech', 'bloody'];
         const fullPrompt = prompt + (stylePrompt ? ', ' + stylePrompt : '');
         const lowerCasePrompt = fullPrompt.toLowerCase();
         let safetyViolation = false;
@@ -197,7 +242,6 @@
         if (safetyViolation) {
             return alert('⚠️ 콘텐츠 정책 위반 가능성이 있는 키워드가 감지되었습니다. 내용을 수정해주세요.');
         }
-        // 안전 필터링 로직 끝
 
         const formData = new FormData();
         formData.append('prompt', fullPrompt);
@@ -210,16 +254,17 @@
         else { return alert(`[${currentMode} Mode] Missing input.`); }
 
 
-        // ⭐️ [STAGE 1: 부드러운 진입]
-        galleryLoadingScreen.style.display = 'flex';
-        // CSS transition을 통해 0.3초 동안 opacity 0 -> 1로 부드럽게 전환
+        // ⭐️ [STAGE 1: 부드러운 검은색 칠하기]
+        fullScreenLoading.style.display = 'flex';
+        // 0.3초 transition을 위해 클래스 추가는 setTimeout 밖에서 즉시 실행
         setTimeout(() => {
-            galleryLoadingScreen.classList.add('active');
-            galleryLoadingScreen.classList.add('start-rolling'); // 롤링 애니메이션 시작
+            fullScreenLoading.classList.add('active'); // opacity 0 -> 1 (검은색 칠하기)
+            loadingGif.style.opacity = 1; // GIF를 부드럽게 표시
+            galleryLoadingScreen.classList.add('start-rolling'); // 롤링 시작
         }, 10);
 
         try {
-            // AI 응답 대기 (버벅거림 방지를 위해 Promise.all 사용 안 함)
+            // AI 응답을 기다리는 Promise
             const response = await fetch('/api/ai-process', { method: 'POST', body: formData });
 
             if (!response.ok) {
@@ -232,11 +277,16 @@
 
             if (data.filename) {
 
-                // ⭐️ [STAGE 2: AI 완료 및 부드러운 퇴장 시작]
-                galleryLoadingScreen.classList.remove('start-rolling'); // 롤링 중지 (움직임 멈춤)
-                galleryLoadingScreen.style.opacity = 0; // CSS transition으로 0.5s 동안 투명하게 사라짐
+                // ⭐️ [STAGE 2: AI 완료 후 흰색 붓칠 및 리디렉션]
 
-                // CSS transition 시간(0.5초)만큼 기다린 후 리디렉션
+                galleryLoadingScreen.classList.remove('start-rolling'); // 롤링 중지 (움직임 멈춤)
+
+                // 배경색을 흰색으로 변경하고 텍스트 색상 변경 (CSS transition이 적용되어 부드럽게)
+                fullScreenLoading.style.backgroundColor = 'white';
+                document.querySelector('.loading-text-full').style.color = 'black';
+                loadingGif.style.filter = 'none'; // GIF의 필터를 해제하여 흰색 배경에 맞춤
+
+                // 0.5초 CSS transition 완료를 기다린 후 리디렉션
                 await new Promise(resolve => setTimeout(resolve, 550));
 
                 // download.html로 이동
@@ -252,14 +302,17 @@
         } catch(e) {
             alert(`Error: ${e.message || 'Network error or processing error.'}`);
             console.error("Fetch/System Error:", e);
-            galleryLoadingScreen.style.display = 'none';
-            galleryLoadingScreen.classList.remove('active');
+            // 에러 발생 시 부드럽게 복구
+            fullScreenLoading.classList.remove('active');
         } finally {
-            // 최종 초기화
-            galleryLoadingScreen.style.display = 'none';
-            galleryLoadingScreen.classList.remove('active');
-            galleryLoadingScreen.style.opacity = 1;
-            galleryLoadingScreen.classList.remove('start-rolling');
+            // 최종 상태 초기화
+            setTimeout(() => { // 짧은 지연 후 display:none
+                fullScreenLoading.style.display = 'none';
+                fullScreenLoading.classList.remove('active');
+                loadingGif.style.opacity = 0;
+                fullScreenLoading.style.backgroundColor = 'rgba(0, 0, 0, 0.95)';
+                document.querySelector('.loading-text-full').style.color = 'white';
+            }, 400);
         }
     });
 
