--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,7 @@
 </div>
 
 <script>
+    // ⭐️ [복구] 모든 전역 변수를 재정의합니다.
     let currentMode = 'image';
     let pcUploadedFile = null;
     let qrUploadedFileName = null;
@@ -104,40 +105,10 @@
     const loadingGif = document.querySelector('.loading-gif-full');
     const loadingText = document.querySelector('.loading-text-full');
 
-    // ⭐️ GIF 타이밍 상수 (정확히 측정하고 조정해야 합니다.)
+    // --- GIF 타이밍 상수 (정확히 측정하고 조정해야 합니다.) ---
     const GIF_WHITE_FRAME_TIME_MS = 2500;
     const FINAL_WAIT_MS = 200;
-    const FADE_IN_TIME_MS = 300; // CSS에서 opacity transition 시간과 일치해야 함
-
-    // --- 갤러리 이미지 로드 (유지) ---
-    async function loadGalleryImages() {
-        try {
-            const response = await fetch('/api/gallery-list');
-            const data = await response.json();
-
-            if (data.images && data.images.length > 0) {
-                const galleryTrack = document.getElementById('galleryTrack');
-                galleryTrack.innerHTML = '';
-
-                const imagesToDisplay = data.images.slice(0, 8);
-
-                for (let i = 0; i < 3; i++) {
-                    imagesToDisplay.forEach(item => {
-                        const img = document.createElement('img');
-                        img.src = item.url;
-                        img.className = 'gallery-loading-item';
-                        galleryTrack.appendChild(img);
-                    });
-                }
-            } else {
-                document.getElementById('galleryTrack').innerHTML = '<p class="error-text">No images in gallery to display.</p>';
-            }
-        } catch (e) {
-            console.error("Failed to load gallery images for loading screen:", e);
-        }
-    }
-
-    loadGalleryImages();
+    const FADE_IN_TIME_MS = 300;
 
     // --- 모드 전환, 업로드, QR 로직 (유지) ---
 
@@ -222,7 +193,7 @@
         qrUploadStartButton.style.display = 'inline-block';
     }
 
-    // --- AI 변환 버튼 클릭 시 (핵심 로직: 부드러운 전환) ---
+    // --- AI 변환 버튼 클릭 시 (핵심 로직: 버벅거림 제거 및 부드러운 전환) ---
     document.getElementById('aiConvertButton').addEventListener('click', async () => {
         let prompt = document.getElementById('textPromptInput').value;
         const style = document.getElementById('styleSelect').value;
@@ -248,23 +219,27 @@
         formData.append('style', style);
         formData.append('mode', currentMode);
 
-        if (currentMode === 'image' && pcUploadedFile) { /* ... (로직 유지) ... */ }
-        else if (currentMode === 'qr' && qrUploadedFileName) { /* ... (로직 유지) ... */ }
-        else if (currentMode === 'text' && prompt) { /* ... (로직 유지) ... */ }
-        else { return alert(`[${currentMode} Mode] Missing input.`); }
-
+        // ⭐️ [복구] 필수 입력 데이터 확인
+        if (currentMode === 'image' && pcUploadedFile) {
+            formData.append('pcImage', pcUploadedFile);
+        } else if (currentMode === 'qr' && qrUploadedFileName) {
+            formData.append('qrUploadedFileName', qrUploadedFileName);
+        } else if (currentMode === 'text' && prompt) {
+            // Text to Image: 파일 필요 없음
+        } else {
+            return alert(`[${currentMode} Mode] Missing input.`);
+        }
 
         // ⭐️ [STAGE 1: 부드러운 검은색 칠하기]
         fullScreenLoading.style.display = 'flex';
-        // 0.3초 transition을 위해 클래스 추가는 setTimeout 밖에서 즉시 실행
         setTimeout(() => {
-            fullScreenLoading.classList.add('active'); // opacity 0 -> 1 (검은색 칠하기)
-            loadingGif.style.opacity = 1; // GIF를 부드럽게 표시
-            galleryLoadingScreen.classList.add('start-rolling'); // 롤링 시작
-        }, 10);
+            fullScreenLoading.classList.add('active');
+            loadingGif.style.opacity = 1;
+            galleryLoadingScreen.classList.add('start-rolling');
+        }, 10); // DOM 업데이트를 위한 최소 지연
 
         try {
-            // AI 응답을 기다리는 Promise
+            // AI 응답 대기
             const response = await fetch('/api/ai-process', { method: 'POST', body: formData });
 
             if (!response.ok) {
@@ -286,7 +261,7 @@
                 document.querySelector('.loading-text-full').style.color = 'black';
                 loadingGif.style.filter = 'none'; // GIF의 필터를 해제하여 흰색 배경에 맞춤
 
-                // 0.5초 CSS transition 완료를 기다린 후 리디렉션
+                // 0.5초 CSS transition 완료를 기다린 후 리디렉션 (버벅거림 제거)
                 await new Promise(resolve => setTimeout(resolve, 550));
 
                 // download.html로 이동
@@ -302,11 +277,9 @@
         } catch(e) {
             alert(`Error: ${e.message || 'Network error or processing error.'}`);
             console.error("Fetch/System Error:", e);
-            // 에러 발생 시 부드럽게 복구
-            fullScreenLoading.classList.remove('active');
         } finally {
             // 최종 상태 초기화
-            setTimeout(() => { // 짧은 지연 후 display:none
+            setTimeout(() => {
                 fullScreenLoading.style.display = 'none';
                 fullScreenLoading.classList.remove('active');
                 loadingGif.style.opacity = 0;
