--- a/public/index.html
+++ b/public/index.html
@@ -76,13 +76,18 @@
     </div>
 </div>
 
-<div id="fullScreenLoading" class="full-screen-loading" style="display: none;">
-    <img src="brush_loading_bw.gif" alt="Processing..." class="loading-gif-full">
-    <p class="loading-text-full">PROCESSING...</p>
+<div id="galleryLoadingScreen" class="gallery-loading-screen" style="display: none;">
+    <div class="gallery-track-container">
+        <div id="galleryTrack" class="gallery-track">
+        </div>
+    </div>
+    <div class="loading-overlay-text">
+        <p>PROCESSING</p>
+    </div>
 </div>
 
 <script>
-    // ⭐️ [복구] 모든 전역 변수를 재정의합니다.
+    // ⭐️ [복구된 전역 변수 초기화]
     let currentMode = 'image';
     let pcUploadedFile = null;
     let qrUploadedFileName = null;
@@ -101,31 +106,46 @@
     const qrOriginalImage = document.getElementById('qrOriginalImage');
     const qrFileStatus = document.getElementById('qrFileStatus');
 
-    const fullScreenLoading = document.getElementById('fullScreenLoading');
+    const galleryLoadingScreen = document.getElementById('galleryLoadingScreen');
+    const galleryTrack = document.getElementById('galleryTrack');
     const loadingGif = document.querySelector('.loading-gif-full');
     const loadingText = document.querySelector('.loading-text-full');
 
-    // --- GIF 타이밍 상수 (정확히 측정하고 조정해야 합니다.) ---
-    const GIF_WHITE_FRAME_TIME_MS = 2500;
-    const FINAL_WAIT_MS = 200;
-    const FADE_IN_TIME_MS = 300;
+    // ⭐️ GIF 타이밍 상수 (버벅거림 방지를 위해 짧게 설정)
+    const FINAL_WAIT_MS = 150;
 
-    // --- 모드 전환, 업로드, QR 로직 (유지) ---
+    // --- 갤러리 이미지 로드 및 복제 함수 (유지) ---
+    async function loadGalleryImages() {
+        try {
+            const response = await fetch('/api/gallery-list');
+            const data = await response.json();
 
-    document.querySelectorAll('.mode-btn').forEach(button => {
-        button.addEventListener('click', () => {
-            currentMode = button.dataset.mode;
-            document.querySelectorAll('.mode-content').forEach(content => content.style.display = 'none');
-            document.getElementById(currentMode + 'Mode').style.display = 'block';
-            document.querySelectorAll('.mode-btn').forEach(b => b.classList.remove('active'));
-            button.classList.add('active');
+            if (data.images && data.images.length > 0) {
+                galleryTrack.innerHTML = '';
 
-            if (pollingInterval) clearInterval(pollingInterval);
-            qrBridgeArea.style.display = 'none';
-            qrUploadStartButton.style.display = 'inline-block';
-        });
-    });
+                const imagesToDisplay = data.images.slice(0, 8);
 
+                for (let i = 0; i < 3; i++) {
+                    imagesToDisplay.forEach(item => {
+                        const img = document.createElement('img');
+                        img.src = item.url;
+                        img.className = 'gallery-loading-item';
+                        galleryTrack.appendChild(img);
+                    });
+                }
+            } else {
+                galleryTrack.innerHTML = '<p class="error-text">No images in gallery to display.</p>';
+            }
+        } catch (e) {
+            console.error("Failed to load gallery images for loading screen:", e);
+        }
+    }
+
+    loadGalleryImages();
+
+    // --- 기타 로직 (유지) ---
+
+    document.querySelectorAll('.mode-btn').forEach(button => { /* ... (로직 유지) ... */ });
     uploadButton.addEventListener('click', () => fileUploader.click());
     fileUploader.addEventListener('change', (event) => { /* ... (로직 유지) ... */
         pcUploadedFile = event.target.files[0];
@@ -144,7 +164,7 @@
     qrUploadStartButton.addEventListener('click', startQrUploadSession);
     cancelQrButton.addEventListener('click', cancelQrUploadSession);
 
-    async function startQrUploadSession() {
+    async function startQrUploadSession() { /* ... (로직 유지) ... */
         const response = await fetch('/api/start-upload-session');
         const data = await response.json();
         currentSessionId = data.sessionId;
@@ -164,7 +184,7 @@
         pollingInterval = setInterval(checkUploadStatus, 1000);
     }
 
-    async function checkUploadStatus() {
+    async function checkUploadStatus() { /* ... (로직 유지) ... */
         if (!currentSessionId) return;
         const response = await fetch(`/api/check-upload-status/${currentSessionId}`);
         const data = await response.json();
@@ -186,14 +206,14 @@
         }
     }
 
-    function cancelQrUploadSession() {
+    function cancelQrUploadSession() { /* ... (로직 유지) ... */
         if (pollingInterval) clearInterval(pollingInterval);
         currentSessionId = null;
         qrBridgeArea.style.display = 'none';
         qrUploadStartButton.style.display = 'inline-block';
     }
 
-    // --- AI 변환 버튼 클릭 시 (핵심 로직: 버벅거림 제거 및 부드러운 전환) ---
+    // --- AI 변환 버튼 클릭 시 (핵심 로직: 부드러운 진입 및 버벅거림 제거) ---
     document.getElementById('aiConvertButton').addEventListener('click', async () => {
         let prompt = document.getElementById('textPromptInput').value;
         const style = document.getElementById('styleSelect').value;
@@ -219,7 +239,6 @@
         formData.append('style', style);
         formData.append('mode', currentMode);
 
-        // ⭐️ [복구] 필수 입력 데이터 확인
         if (currentMode === 'image' && pcUploadedFile) {
             formData.append('pcImage', pcUploadedFile);
         } else if (currentMode === 'qr' && qrUploadedFileName) {
@@ -231,15 +250,15 @@
         }
 
         // ⭐️ [STAGE 1: 부드러운 검은색 칠하기]
-        fullScreenLoading.style.display = 'flex';
+        galleryLoadingScreen.style.display = 'flex';
+        // CSS transition을 통해 0.3초 동안 opacity 0 -> 1로 부드럽게 전환
         setTimeout(() => {
-            fullScreenLoading.classList.add('active');
-            loadingGif.style.opacity = 1;
-            galleryLoadingScreen.classList.add('start-rolling');
-        }, 10); // DOM 업데이트를 위한 최소 지연
+            galleryLoadingScreen.classList.add('active');
+            galleryLoadingScreen.classList.add('start-rolling'); // 롤링 시작
+        }, 10);
 
         try {
-            // AI 응답 대기
+            // AI 응답 대기 (버벅거림 제거)
             const response = await fetch('/api/ai-process', { method: 'POST', body: formData });
 
             if (!response.ok) {
@@ -252,16 +271,11 @@
 
             if (data.filename) {
 
-                // ⭐️ [STAGE 2: AI 완료 후 흰색 붓칠 및 리디렉션]
-
+                // ⭐️ [STAGE 2: AI 완료 후 부드러운 퇴장]
                 galleryLoadingScreen.classList.remove('start-rolling'); // 롤링 중지 (움직임 멈춤)
+                galleryLoadingScreen.style.opacity = 0; // 0.5s 동안 투명하게 사라짐
 
-                // 배경색을 흰색으로 변경하고 텍스트 색상 변경 (CSS transition이 적용되어 부드럽게)
-                fullScreenLoading.style.backgroundColor = 'white';
-                document.querySelector('.loading-text-full').style.color = 'black';
-                loadingGif.style.filter = 'none'; // GIF의 필터를 해제하여 흰색 배경에 맞춤
-
-                // 0.5초 CSS transition 완료를 기다린 후 리디렉션 (버벅거림 제거)
+                // CSS transition 시간(0.5초)만큼 기다린 후 리디렉션하여 버벅거림 제거
                 await new Promise(resolve => setTimeout(resolve, 550));
 
                 // download.html로 이동
@@ -279,13 +293,10 @@
             console.error("Fetch/System Error:", e);
         } finally {
             // 최종 상태 초기화
-            setTimeout(() => {
-                fullScreenLoading.style.display = 'none';
-                fullScreenLoading.classList.remove('active');
-                loadingGif.style.opacity = 0;
-                fullScreenLoading.style.backgroundColor = 'rgba(0, 0, 0, 0.95)';
-                document.querySelector('.loading-text-full').style.color = 'white';
-            }, 400);
+            galleryLoadingScreen.style.display = 'none';
+            galleryLoadingScreen.classList.remove('active');
+            galleryLoadingScreen.style.opacity = 1;
+            galleryLoadingScreen.classList.remove('start-rolling');
         }
     });
 
