--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,6 @@
 </div>
 
 <script>
-    // ⭐️ [복구된 전역 변수 초기화]
     let currentMode = 'image';
     let pcUploadedFile = null;
     let qrUploadedFileName = null;
@@ -111,7 +110,7 @@
     const loadingGif = document.querySelector('.loading-gif-full');
     const loadingText = document.querySelector('.loading-text-full');
 
-    // ⭐️ GIF 타이밍 상수 (버벅거림 방지를 위해 짧게 설정)
+    // --- GIF 타이밍 상수는 이제 사용하지 않음 (버벅거림 방지) ---
     const FINAL_WAIT_MS = 150;
 
     // --- 갤러리 이미지 로드 및 복제 함수 (유지) ---
@@ -121,6 +120,7 @@
             const data = await response.json();
 
             if (data.images && data.images.length > 0) {
+                const galleryTrack = document.getElementById('galleryTrack');
                 galleryTrack.innerHTML = '';
 
                 const imagesToDisplay = data.images.slice(0, 8);
@@ -134,7 +134,7 @@
                     });
                 }
             } else {
-                galleryTrack.innerHTML = '<p class="error-text">No images in gallery to display.</p>';
+                document.getElementById('galleryTrack').innerHTML = '<p class="error-text">No images in gallery to display.</p>';
             }
         } catch (e) {
             console.error("Failed to load gallery images for loading screen:", e);
@@ -145,9 +145,22 @@
 
     // --- 기타 로직 (유지) ---
 
-    document.querySelectorAll('.mode-btn').forEach(button => { /* ... (로직 유지) ... */ });
+    document.querySelectorAll('.mode-btn').forEach(button => {
+        button.addEventListener('click', () => {
+            currentMode = button.dataset.mode;
+            document.querySelectorAll('.mode-content').forEach(content => content.style.display = 'none');
+            document.getElementById(currentMode + 'Mode').style.display = 'block';
+            document.querySelectorAll('.mode-btn').forEach(b => b.classList.remove('active'));
+            button.classList.add('active');
+
+            if (pollingInterval) clearInterval(pollingInterval);
+            qrBridgeArea.style.display = 'none';
+            qrUploadStartButton.style.display = 'inline-block';
+        });
+    });
+
     uploadButton.addEventListener('click', () => fileUploader.click());
-    fileUploader.addEventListener('change', (event) => { /* ... (로직 유지) ... */
+    fileUploader.addEventListener('change', (event) => {
         pcUploadedFile = event.target.files[0];
         qrUploadedFileName = null;
 
@@ -164,7 +177,7 @@
     qrUploadStartButton.addEventListener('click', startQrUploadSession);
     cancelQrButton.addEventListener('click', cancelQrUploadSession);
 
-    async function startQrUploadSession() { /* ... (로직 유지) ... */
+    async function startQrUploadSession() {
         const response = await fetch('/api/start-upload-session');
         const data = await response.json();
         currentSessionId = data.sessionId;
@@ -184,7 +197,7 @@
         pollingInterval = setInterval(checkUploadStatus, 1000);
     }
 
-    async function checkUploadStatus() { /* ... (로직 유지) ... */
+    async function checkUploadStatus() {
         if (!currentSessionId) return;
         const response = await fetch(`/api/check-upload-status/${currentSessionId}`);
         const data = await response.json();
@@ -206,14 +219,14 @@
         }
     }
 
-    function cancelQrUploadSession() { /* ... (로직 유지) ... */
+    function cancelQrUploadSession() {
         if (pollingInterval) clearInterval(pollingInterval);
         currentSessionId = null;
         qrBridgeArea.style.display = 'none';
         qrUploadStartButton.style.display = 'inline-block';
     }
 
-    // --- AI 변환 버튼 클릭 시 (핵심 로직: 부드러운 진입 및 버벅거림 제거) ---
+    // --- AI 변환 버튼 클릭 시 (핵심 로직: 부드러운 전환) ---
     document.getElementById('aiConvertButton').addEventListener('click', async () => {
         let prompt = document.getElementById('textPromptInput').value;
         const style = document.getElementById('styleSelect').value;
@@ -251,14 +264,15 @@
 
         // ⭐️ [STAGE 1: 부드러운 검은색 칠하기]
         galleryLoadingScreen.style.display = 'flex';
-        // CSS transition을 통해 0.3초 동안 opacity 0 -> 1로 부드럽게 전환
+
+        // 0.5초 CSS transition을 통해 opacity 0 -> 1로 부드럽게 전환
         setTimeout(() => {
             galleryLoadingScreen.classList.add('active');
             galleryLoadingScreen.classList.add('start-rolling'); // 롤링 시작
         }, 10);
 
         try {
-            // AI 응답 대기 (버벅거림 제거)
+            // AI 응답 대기
             const response = await fetch('/api/ai-process', { method: 'POST', body: formData });
 
             if (!response.ok) {
@@ -272,6 +286,7 @@
             if (data.filename) {
 
                 // ⭐️ [STAGE 2: AI 완료 후 부드러운 퇴장]
+
                 galleryLoadingScreen.classList.remove('start-rolling'); // 롤링 중지 (움직임 멈춤)
                 galleryLoadingScreen.style.opacity = 0; // 0.5s 동안 투명하게 사라짐
 
@@ -293,10 +308,12 @@
             console.error("Fetch/System Error:", e);
         } finally {
             // 최종 상태 초기화
-            galleryLoadingScreen.style.display = 'none';
-            galleryLoadingScreen.classList.remove('active');
-            galleryLoadingScreen.style.opacity = 1;
-            galleryLoadingScreen.classList.remove('start-rolling');
+            setTimeout(() => {
+                galleryLoadingScreen.style.display = 'none';
+                galleryLoadingScreen.classList.remove('active');
+                galleryLoadingScreen.style.opacity = 1;
+                galleryLoadingScreen.classList.remove('start-rolling');
+            }, 600); // 0.6초 후 완전히 제거 (CSS transition 시간보다 길게)
         }
     });
 
